--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,10 +10,9 @@ jobs:
           - ubuntu-latest
           - windows-latest
     runs-on: ${{ matrix.os }}
-    container:
-      image: golang
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
       - run: go build
       - uses: golangci/golangci-lint-action@v2
       - run: go test -covermode atomic -coverprofile coverage.txt
